--- a/angular/_pxb-component-theme.scss
+++ b/angular/_pxb-component-theme.scss
@@ -83,10 +83,9 @@
 @mixin pxb-mobile-stepper($theme) {
     $primary: map-get($theme, primary);
     $background: map-get($theme, background);
-    $foreground: map-get($theme, foreground);
     .pxb-mobile-stepper {
         .pxb-mobile-stepper-dot {
-            background-color: map-get($foreground, disabled);
+            background-color: map-get($background, disabled-button-toggle);
         }
         .pxb-mobile-stepper-dot-active {
             background-color: map-get($primary, 500);
