--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -145,7 +145,7 @@
     .mat-chip {
         &.mat-standard-chip,
         &.mat-primary,
-        &.mat-accent, {
+        &.mat-accent {
             .mat-chip-remove {
                 color: map-get($pxb-blue, 100);
                 &:hover {
@@ -193,7 +193,8 @@
     .mat-calendar-body-today:not(.mat-calendar-body-selected):not(.mat-calendar-body-comparison-identical) {
         border-color: map-deep-get($overrides, primary, main);
     }
-    .mat-form-field-appearance-legacy .mat-form-field-prefix .mat-datepicker-toggle-default-icon, .mat-form-field-appearance-legacy .mat-form-field-suffix .mat-datepicker-toggle-default-icon {
+    .mat-form-field-appearance-legacy .mat-form-field-prefix .mat-datepicker-toggle-default-icon,
+    .mat-form-field-appearance-legacy .mat-form-field-suffix .mat-datepicker-toggle-default-icon {
         color: map-get($foreground, secondary-text);
     }
     .mat-input-element.mat-form-field-autofill-control.mat-datepicker-input {
