--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -203,7 +203,6 @@
 
     /* input fields */
     .mat-form-field {
-
         /* Input Placeholders */
         input::-webkit-input-placeholder {
             color: map-get($foreground, disabled);
@@ -215,14 +214,17 @@
             &.mat-form-field-appearance-standard {
                 .mat-form-field-underline {
                     background-image: none;
-                    background-color:  map-get($foreground, disabled);
+                    background-color: map-get($foreground, disabled);
                 }
             }
-            .mat-hint, .mat-form-field-label, .mat-form-field-outline-thick, .mat-form-field-suffix {
+            .mat-hint,
+            .mat-form-field-label,
+            .mat-form-field-outline-thick,
+            .mat-form-field-suffix {
                 color: map-get($foreground, disabled);
             }
             &.mat-form-field-appearance-fill .mat-form-field-underline::before {
-                background-color:  map-get($foreground, disabled);
+                background-color: map-get($foreground, disabled);
             }
         }
 
@@ -260,7 +262,7 @@
                     color: map-deep-get($overrides, primary, dark);
                 }
                 .mat-form-field-flex {
-                    background-color: rgba(map-get($pxb-black, 800), .5);
+                    background-color: rgba(map-get($pxb-black, 800), 0.5);
                 }
                 .mat-form-field-flex:hover {
                     background-color: map-get($pxb-black, 600);
@@ -305,7 +307,8 @@
         /* Error */
         &.mat-form-field-invalid:not(.mat-form-field-disabled) {
             /* Standard */
-            &.mat-form-field-appearance-standard, &.mat-form-field-appearance-legacy {
+            &.mat-form-field-appearance-standard,
+            &.mat-form-field-appearance-legacy {
                 .mat-form-field-outline-thick {
                     color: map-deep-get($overrides, error, dark);
                 }
